<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dev Hand</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="chooseProject">Get A Hand!</string>
    <string name="newProject">New Project</string>
    <string name="title_activity_new_project">New Project!</string>
    <string name="newProjectTitle">Explain Your Project!</string>
    <string name="project_name">Project Name</string>
    <string name="platform">Platform</string>
    <string name="database">Database</string>
    <string name="brnaddLanguage">Add Language</string>
    <string name="title_activity_project_help">Project Hand</string><string name="addNotes">Add Note</string><string name="btnviewNotes">btnviewNotes</string><string name="viewNotes">View Notes</string><string name="getHand">Get A Hand</string>

</resources>
