<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".NewProject$PlaceholderFragment">

    <TextView
        android:text="@string/newProjectTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:textSize="30sp"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@id/txtProjectName"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:autoText="false"
        android:hint="@string/project_name" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@id/txtPlatform"
        android:hint="@string/platform"
        android:layout_alignParentRight="true"
        android:layout_below="@id/txtProjectName" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@id/txtDatabase"
        android:layout_below="@id/txtPlatform"
        android:layout_alignParentLeft="true"
        android:hint="@string/database" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/brnaddLanguage"
        android:id="@id/addLanguage"
        android:layout_below="@id/txtDatabase"
        android:layout_alignParentLeft="true"
        android:hint="@string/brnaddLanguage"
        android:background="@drawable/round" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/lstLanguages"
        android:layout_below="@id/addLanguage"
        android:layout_alignParentLeft="true" />

</RelativeLayout>
